<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/mchatrf"
        android:background="@color/welcomeBackground"
        android:textSize="30sp"
        android:paddingLeft="40dp"
        android:textColor="@color/welcometextcolor"
        android:layout_marginTop="15dp"
            />
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/introductionFullText"
                    android:textColor="@color/instructionTextColor"
                    android:layout_margin="10dp"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/introductionFullText_1"
                    android:textColor="@color/welcomeBackground"
                    android:layout_margin="10dp"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/introductionFullText_2"
                    android:textColor="@color/instructionTextColor"
                    android:layout_margin="10dp"
                    android:textSize="20dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/takeTheTest"
            android:background="@color/buttonBackground"
            android:layout_alignParentBottom="true"
            android:textSize="35sp"
            android:textColor="@color/welcometextcolor"
            android:textAlignment="center"
            android:id="@+id/takeTheTest"
            />
</RelativeLayout>
