<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_circle_outline_grey600_36dp"
        android:background="@color/welcometextcolor"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/close_Button"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/childDetail"
                android:background="@color/buttonBackground"
                android:textSize="35sp"
                android:textColor="@color/welcometextcolor"
                android:paddingLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameOfChild"
                android:textColor="@color/buttonBackground"
                android:textSize="17sp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/childName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/hintName"
                android:textColor="@color/instructionTextColor"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="20dp"
                />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ageOfChild"
            android:textColor="@color/buttonBackground"
            android:textSize="17sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"/>
        <EditText
            android:id="@+id/chidAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapWords"
            android:hint="@string/hintAge"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/letsStart"
        android:textColor="@color/welcometextcolor"
        android:background="@color/greenColor"
        android:textSize="30sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:paddingLeft="80dp"
        android:paddingTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="160dp"
        />
</RelativeLayout>