<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.mchat.MainActivity"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:text="@string/welcometext"
        android:background="@color/welcomeBackground"
        android:textSize="30sp"
        android:textColor="@color/welcometextcolor"
        android:paddingTop="190dp"
        android:paddingLeft="20dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/instructionText"
        android:textColor="@color/instructionTextColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/knowMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="23dp"
        android:text="@string/knowMore"
        android:textSize="20sp"
        android:textColor="@color/welcomeBackground" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/buttonBackground"
        android:text="@string/takeTheTest"
        android:textAlignment="center"
        android:textColor="@color/welcometextcolor"
        android:textSize="35sp"
        android:paddingTop="7dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/bt_take_the_test"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        />
</RelativeLayout>
